# Lara

./: .gitignore  CMakeLists.txt  README.md  commonfunctions.cpp  commonfunctions.h  configurergbform.cpp  configurergbform.h  configurergbform.ui  consts.h  conversionparameters.h  csvwindow.cpp  csvwindow.h  csvwindow.ui  geojsonwindow.cpp  geojsonwindow.h  geojsonwindow.ui  geopackagewindow.cpp  geopackagewindow.h  geopackagewindow.ui  geotiffwindow.cpp  geotiffwindow.h  geotiffwindow.ui  imageconverter.cpp  imageconverter.h  luacodewindow.cpp  luacodewindow.h  luacodewindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  newcsvwindow.cpp  newcsvwindow.h  newcsvwindow.ui  newgeojsonwindow.cpp  newgeojsonwindow.h  newgeojsonwindow.ui  newgeopackagewindow.cpp  newgeopackagewindow.h  newgeopackagewindow.ui  pngfunctions.h  (+7 more)
